--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -40,7 +40,7 @@
         android:label="@string/app_name">
         <!-- Register Activity -->
         <activity
-            android:name=".RegisterActivity"
+            android:name=".SplashScreen"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -56,6 +56,9 @@
             android:label="@string/app_name"></activity>
         <activity
             android:name=".SendRandomMessage"
+            android:label="Send Random Message"></activity>
+        <activity
+            android:name=".RegisterActivity"
             android:label="Send Random Message"></activity>
 
         <receiver
