--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Dec 01 15:02:07 EET 2015
-sdk.dir=/home/hazem/android-sdks
+#Fri Dec 11 02:06:20 EET 2015
+sdk.dir=D\:\\prog\\science\\android-sdk-windows-1\\android-sdk-windows
