--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.androidhive.pushnotifications"
+    package="com.eshraq.sharikney"
     android:versionCode="1"
     android:versionName="1.0">
 
     <!-- GCM requires Android SDK version 2.2 (API level 8) or above. -->
     <uses-sdk
         android:minSdkVersion="8"
-        android:targetSdkVersion="16" />
+        android:targetSdkVersion="23" />
 
     <!-- GCM connects to Internet Services. -->
     <uses-permission android:name="android.permission.INTERNET" />
@@ -20,10 +20,10 @@
 
     <!-- Creates a custom permission so only this app can receive its messages. -->
     <permission
-        android:name="com.androidhive.pushnotifications.permission.C2D_MESSAGE"
+        android:name="com.eshraq.sharikney.permission.C2D_MESSAGE"
         android:protectionLevel="signature" />
 
-    <uses-permission android:name="com.androidhive.pushnotifications.permission.C2D_MESSAGE" />
+    <uses-permission android:name="com.eshraq.sharikney.permission.C2D_MESSAGE" />
 
     <!-- This app has permission to register and receive data message. -->
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
@@ -55,10 +55,10 @@
             android:configChanges="orientation|keyboardHidden"
             android:label="@string/app_name"></activity>
         <activity
-            android:name=".SendRandomMessage"
+            android:name="com.eshraq.sharikney.SendRandomMessage"
             android:label="Send Random Message"></activity>
         <activity
-            android:name=".RegisterActivity"
+            android:name="com.eshraq.sharikney.RegisterActivity"
             android:label="Send Random Message"></activity>
 
         <receiver
@@ -71,11 +71,11 @@
                 <!-- Receives the registration id. -->
                 <action android:name="com.google.android.c2dm.intent.REGISTRATION" />
 
-                <category android:name="com.androidhive.pushnotifications" />
+                <category android:name="com.eshraq.sharikney" />
             </intent-filter>
         </receiver>
 
-        <service android:name=".GCMIntentService" />
+        <service android:name="com.eshraq.sharikney.GCMIntentService" />
     </application>
 
 </manifest>
